# cryptozayka

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements-runtime.txt
.github/workflows/: ci.yml
alembic/versions/: 1e67f1c84c14_next_change.py  2019c273a55a_add_status_result_to_batches.py  20250512_001_initial_tables.py  cdbbe8148cee_comment.py
cryptozayka/: __init__.py  api.py  cli.py  settings.py  storage.py  storage_pg.py  telegram_bot.py  worker.py
cryptozayka/bots/: __init__.py  control_bot.py  notify.py
cryptozayka/core/: __init__.py  errors.py  executor.py  flags.py  gpt_client.py  prompt_builder.py  rag.py  storage_pg.py  strategy.py  worker.py
cryptozayka/monitoring/: __init__.py  dashboard_ws.py  gas_exporter.py  healthcheck.py  metrics.py  otel.py
cryptozayka/otel/: __init__.py
cryptozayka/parsers/: __init__.py  results.py
cryptozayka/storage/: __init__.py  pg.py
cryptozayka/treasury/: __init__.py  claim.py  eth.py  gas.py
prompts/: project_eval.md
tests/: conftest.py  test_storage_pg.py  test_strategy.py
