[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cryptozayka"
version = "0.1.0"
description = "Async on-chain airdrop automation framework"
authors = [{ name = "CryptoZayka Team", email = "dev@cryptozayka.io" }]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "asyncpg>=0.29",               # ← NEW
  "pydantic-settings>=2.2",      # ← NEW
  "aiosqlite>=0.20",
  "pydantic>=2.7",
  "typer[all]>=0.12",
  "openai>=1.30",
  "web3>=6.18",
  "python-dotenv>=1.0"
]

[project.optional-dependencies]
dev = [
  "black>=24.4",
  "ruff>=0.4",
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-mock>=3.14",
  "mypy>=1.8"
]

[project.scripts]
cryptozayka = "cryptozayka.cli:app"

# ───────── Formatter / Linter ─────────
[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select  = ["E", "F"]                 # критичные ошибки
ignore  = ["E501", "E701", "I001"]   # длинные строки, one-liner, импорты

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501", "E701", "I001", "E401"]
